# OpenLensFlare

./: LICENSE  README.md
LensPlanner/: .gitignore  CMakeLists.txt
LensPlanner/cmake/Modules/: FindOpenLensFlare.cmake
LensPlanner/src/: AttributeCellDelegate.cpp  AttributeCellDelegate.h  AttributeCellWidgets.h  Dependencies.h  GhostSerializer.cpp  GhostSerializer.h  GuiMain.cpp  ImageLibrary.cpp  ImageLibrary.h  LensFlarePreviewProperties.cpp  LensFlarePreviewProperties.h  LensFlarePreviewer.cpp  LensFlarePreviewer.h  MainWindow.cpp  MainWindow.h  OpticalSystemEditor.cpp  OpticalSystemEditor.h  OpticalSystemPreviewProperties.cpp  OpticalSystemPreviewProperties.h  OpticalSystemPreviewer.cpp  OpticalSystemPreviewer.h  OpticalSystemSerializer.cpp  OpticalSystemSerializer.h  Resources.qrc
LensPlanner/src/Resources/: OpticalSystemPreviewer_fs.glsl  OpticalSystemPreviewer_vs.glsl
OpenLensFlare/: .gitignore  CMakeLists.txt
OpenLensFlare/cmake/: EmbedShader.cmake
OpenLensFlare/examples/systems/: HeliarTronnier.xml  Lensbaby.xml  OpticalSystem.xml  canon-zoom-long.xml  canon-zoom-mid.xml  canon-zoom-short.xml  heliar-tronnier-bounds-full.xml  heliar-tronnier-bounds-no-merge.xml  heliar-tronnier.xml  itoh-zoom-long.xml  itoh-zoom-mid.xml  itoh-zoom-short.xml  kreitzer-tele.xml  nikon-zoom-long.xml  nikon-zoom-mid.xml  nikon-zoom-short.xml
OpenLensFlare/src/: Dependencies.h  Ghost.h  GhostAlgorithm.h  GhostAttributes.h  GhostList.h  LightSource.h  OpenLensFlare.h  OpticalSystem.h  StarburstAlgorithm.h
OpenLensFlare/src/Algorithms/: DiffractionStarburstAlgorithm.cpp  DiffractionStarburstAlgorithm.h  GLHelpers.h  MatrixGhostAlgorithm.cpp  MatrixGhostAlgorithm.h  RayTraceGhostAlgorithm.cpp  RayTraceGhostAlgorithm.h
OpenLensFlare/src/Shaders/: Common_ColorSpace.glsl  Common_Functions.glsl  Common_Version.glsl  DiffractionStarburstAlgorithm_Generate_FragmentShader.glsl  DiffractionStarburstAlgorithm_Generate_VertexShader.glsl  DiffractionStarburstAlgorithm_Render_FragmentShader.glsl  DiffractionStarburstAlgorithm_Render_VertexShader.glsl  MatrixGhostAlgorithm_RenderGhost_FragmentShader.glsl  MatrixGhostAlgorithm_RenderGhost_VertexShader.glsl  RayTraceGhostAlgorithm_RenderGhost_FragmentShader.glsl  RayTraceGhostAlgorithm_RenderGhost_GeometryShader.glsl  RayTraceGhostAlgorithm_RenderGhost_Uniforms.glsl  RayTraceGhostAlgorithm_RenderGhost_VertexShader.glsl
